[metadata]
# replace with your username:
name = clokify
version = 0.0.1
author = Noe Macias
author_email = notnull011@gmail.com
description = Clokify CLI, Manage Time, Timers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null011/ClokiPy
project_urls =
    Bug Tracker = https://github.com/null011/ClokiPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    httpx
    pydantic
    pytz
    rich
py_modules = clokipy


[options.entry_points]
console_scripts =
    clokipy = clokipy:entry
